{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 15,
  "lineage": "4e3a32b6-1b8d-9dd0-f770-67875fc54805",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2860e45b5688bef",
            "domain": "vpc",
            "id": "eipalloc-0f2860e45b5688bef",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-218-52-37.compute-1.amazonaws.com",
            "public_ip": "44.218.52.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:949609334280:instance/i-038e28bcd5a2f0105",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038e28bcd5a2f0105",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086855e78af1f981b",
            "private_dns": "ip-10-0-2-177.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b8473d190247be6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ea8d6afa7e024e16"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f46112e81b706179",
            "tags": {
              "Name": "task-instance"
            },
            "tags_all": {
              "Name": "task-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea8d6afa7e024e16"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.subnetn",
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:internet-gateway/igw-0238d6d380d13cbba",
            "id": "igw-0238d6d380d13cbba",
            "owner_id": "949609334280",
            "tags": {
              "Name": "task-igw"
            },
            "tags_all": {
              "Name": "task-igw"
            },
            "vpc_id": "vpc-005dae5c28db9a766"
          },
          "dependencies": [
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2860e45b5688bef",
            "association_id": "eipassoc-0eebc641dfafc5171",
            "connectivity_type": "public",
            "id": "nat-023edf057b34aad35",
            "network_interface_id": "eni-07d31ba23d55afefb",
            "private_ip": "10.0.1.32",
            "public_ip": "44.218.52.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066db428777042c39"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igwn",
            "aws_subnet.subnetn2",
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0238d6d380d13cbba",
            "id": "r-rtb-03be1a1524a62a47a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03be1a1524a62a47a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwn",
            "aws_route_table.rtablen",
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004ef747f2cb084981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-023edf057b34aad35",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004ef747f2cb08498",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igwn",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.subnetn2",
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:route-table/rtb-004ef747f2cb08498",
            "id": "rtb-004ef747f2cb08498",
            "owner_id": "949609334280",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-005dae5c28db9a766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtablen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:route-table/rtb-03be1a1524a62a47a",
            "id": "rtb-03be1a1524a62a47a",
            "owner_id": "949609334280",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "task2-Public-route-table"
            },
            "tags_all": {
              "Name": "task2-Public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-005dae5c28db9a766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1915c2260e3775a",
            "route_table_id": "rtb-03be1a1524a62a47a",
            "subnet_id": "subnet-066db428777042c39"
          },
          "dependencies": [
            "aws_route_table.rtablen",
            "aws_subnet.subnetn2",
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205d9d85496ee082",
            "route_table_id": "rtb-004ef747f2cb08498",
            "subnet_id": "subnet-0f46112e81b706179"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.subnetn",
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:security-group/sg-0ea8d6afa7e024e16",
            "description": "Security group for instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea8d6afa7e024e16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "949609334280",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-005dae5c28db9a766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:subnet/subnet-0f46112e81b706179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46112e81b706179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949609334280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task2-prv-subnet"
            },
            "tags_all": {
              "Name": "task2-prv-subnet"
            },
            "vpc_id": "vpc-005dae5c28db9a766"
          },
          "dependencies": [
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:subnet/subnet-066db428777042c39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066db428777042c39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949609334280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task2-public-subnet"
            },
            "tags_all": {
              "Name": "task2-public-subnet"
            },
            "vpc_id": "vpc-005dae5c28db9a766"
          },
          "dependencies": [
            "aws_vpc.vpctask2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpctask2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:vpc/vpc-005dae5c28db9a766",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2df70453b0c656c",
            "default_route_table_id": "rtb-0097481b55f80bcc1",
            "default_security_group_id": "sg-0a8e7c05c789f5098",
            "dhcp_options_id": "dopt-0f8d5ff57028202c7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005dae5c28db9a766",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0097481b55f80bcc1",
            "owner_id": "949609334280",
            "tags": {
              "Name": "task2"
            },
            "tags_all": {
              "Name": "task2"
            }
          }
        }
      ]
    }
  ]
}